--- a/WWR-Website/WWR_Project/Styles/Site_Plan_Rafting.css
+++ b/WWR-Website/WWR_Project/Styles/Site_Plan_Rafting.css
@@ -2,7 +2,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Radio+Canada:wght@300&family=Tapestry&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,15 +12,15 @@ Fonts are separated by a | */
   --accent2-color: #fcbf49;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Lato";
+  --paragraph-font: Radio+Canada;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --headline-color-on-white: #d62828;  /* headlines on a white background */ 
+  --headline-color-on-color: #fcbf49; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #f77f00; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #fcbf49; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #003049  ;
   --nav-link-color: #396E94;
   --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
