--- a/WRR_Project/styles/Style.css
+++ b/WRR_Project/styles/Style.css
@@ -2,6 +2,13 @@
 #background {
     height: 725px;
 }
+.hero-img {
+    width: 100%;
+    margin-top: 0px;
+}
+.book{
+    margin-left: 500px;
+}
 body {
     background-color: #fcfbfb; 
 }
@@ -11,6 +18,7 @@ header {
 nav a:hover {
     background-color: black;
 }
+
           
 nav a:hover {
     background-color: black;
@@ -18,6 +26,7 @@ nav a:hover {
 }    
 .icon {
     width: 80px;
+    margin-left: 910px;
 }
 nav a {
     text-align: center;
@@ -26,11 +35,17 @@ nav a {
 }   
 
 .home-title {
-    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-family: 'Bradley Hand', sans-serif;
     font-size: 2em;
+    font-display: 'Bradley Hand';
+    font-style: italic;
     text-align: center;
+    color: burlywood;
+    
 }
-.h4 { text-align: center;
+.h44 { text-align: center;
+    text-decoration:wavy;
+    color: burlywood;
 }
 .msg {
     background-color: #6f7364;
@@ -76,3 +91,132 @@ nav a {
 main section img {
     box-sizing: border-box;
 }
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+  
+nav {
+    display: flex;
+    justify-content: space-around;
+}   
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
+
+#hero-msg h4 {
+    color: white;
+}
+    
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}  
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}   
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+} 
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.logo {
+    width: 100%;
+}
+
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.msg {
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}      
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
