--- a/WRR_Project/styles/Style.css
+++ b/WRR_Project/styles/Style.css
@@ -1,6 +1,8 @@
 
 #background {
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .hero-img {
     width: 100%;
@@ -18,7 +20,6 @@ header {
 nav a:hover {
     background-color: black;
 }
-
           
 nav a:hover {
     background-color: black;
@@ -48,7 +49,7 @@ nav a {
     color: burlywood;
 }
 .msg {
-    background-color: #6f7364;
+    background-color: #5f5350;
     line-height: 1.5em;
   }
   body {
@@ -84,9 +85,12 @@ nav a {
 }
 .card-img {
     border: 10px solid #d9c2a3;
-    margin-left: auto;
+    margin-left: 850px;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    max-height: 200px;
 }
 main section img {
     box-sizing: border-box;
@@ -140,8 +144,25 @@ nav {
     z-index: -1;
 } 
 
-.card-img, .mountains {
+.mountains {
     width: 100%;
+    max-width: 800px;
+    margin-left: 555px;
+    margin-top: 50px;
+grid-column: 2/7 ;
+grid-row: 5/8;
+}
+.card-img, .rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.card-img, .camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.card-img, .rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .logo {
@@ -170,7 +191,14 @@ footer {
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #0c0c0c;
+    margin-left: 405px;
+    max-width: 1000px;
+    max-height: 500px;
+    width: 100%;
+    height: 100%;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 .mountains {
     width: 100%;
