--- a/WRR_Project/styles/Site_Plan_Style.css
+++ b/WRR_Project/styles/Site_Plan_Style.css
@@ -163,3 +163,9 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+.wireframe {
+  max-width: 650px;
+  max-height: 550px;
+  width: 100%;
+  height: 100%;
+}
