--- a/WRR_Project/styles/Style.css
+++ b/WRR_Project/styles/Style.css
@@ -49,7 +49,7 @@ nav a {
     color: burlywood;
 }
 .msg {
-    background-color: #5f5350;
+    background-color: #8b681d;
     line-height: 1.5em;
   }
   body {
@@ -62,6 +62,9 @@ nav a {
 h2 {
     margin: 0;
     text-align: center;
+}
+.headtexts{color: #d9c2a3;
+
 }
             
 
@@ -170,7 +173,7 @@ grid-row: 5/8;
 }
 
 footer {
-    background-color: #6f7364;
+    background-color: #8b681d;
     padding: 25px 50px;
     margin-top: 200px; 
     display: flex;
