Final stuff on White Water

--- a/WRR_Project/styles/styledw.css
+++ b/WRR_Project/styles/styledw.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 h2, h1 {
-  background-color: #0892A5;
+  background-color: #746305;
   font-family: Roboto, Helvetica, sans-serif;
   line-height: 2em;
   margin-bottom: -30px;
   padding: .5em;
-  border-top: 5px ridge gray;
+  border-top: 5px ridge rgb(65, 62, 62);
   border-bottom: 5px ridge black;
   text-align: center;
   font-size: 2em
