even more changes

--- a/WRR_Project/styles/personalstyle.css
+++ b/WRR_Project/styles/personalstyle.css
@@ -173,7 +173,7 @@ grid-row: 5/8;
 }
 
 footer {
-    background-color: #8b681d;
+    background-color: #8b1d1d;
     padding: 25px 50px;
     margin-top: 200px; 
     display: flex;
